fix bug on width of p wrapping select for service insurance

--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -129,4 +129,8 @@
     .customers_new_edit_p, #customer_form_insurance_select_p {
         margin: 6px auto;
     }
+
+    #customer_form_insurance_select_p {
+        width: 100%;
+    }
 }
